[package]
name = "listenbrainz-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["now"] }
reqwest = {
  version = "0.13.4",
  default-features = false,
  features = ["json", "query", "rustls"]
}
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false }
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["macros", "rt-multi-thread"]
}

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
codegen-units = 1
